# predictionmarkets

./: .env.example  .gitignore  app.py  app_audit.py  pyproject.toml  requirements.txt
configs/: settings.yaml
data/predictions/: anthropic_claude-opus-4-6.jsonl  anthropic_claude-opus-4-6_run_0.jsonl  anthropic_claude-opus-4-6_run_1.jsonl  anthropic_claude-opus-4-6_run_2.jsonl  critic_tool_agent_claude_t03.jsonl  critic_tool_agent_claude_t07.jsonl  critic_tool_agent_gemini_t03.jsonl  critic_tool_agent_gpt_t03.jsonl  critic_tool_agent_gpt_t07.jsonl  ensemble_agent.jsonl  google_gemini-2.5-pro.jsonl  google_gemini-2.5-pro_run_0.jsonl  google_gemini-2.5-pro_run_1.jsonl  google_gemini-2.5-pro_run_2.jsonl  judge.jsonl  openai_gpt-5.4.jsonl  openai_gpt-5.4_run_0.jsonl  openai_gpt-5.4_run_1.jsonl  openai_gpt-5.4_run_2.jsonl  search_anthropic_claude-opus-4-6.jsonl  search_google_gemini-2.5-pro.jsonl  search_openai_gpt-5.4.jsonl  tool_agent_claude_t03.jsonl  tool_agent_claude_t07.jsonl  tool_agent_gemini_t03.jsonl  tool_agent_gpt_t03.jsonl  tool_agent_gpt_t07.jsonl
data/processed/: markets.csv  markets.json  top50_ids.json  trade_signals_sample.json
results/: scores.json
scripts/: explore_trade_signals.py  fetch_markets.py  generate_report.py  refresh_and_update_dns.sh  refresh_dashboard.py  run_agent.py  run_all.py  run_baselines.py  score_predictions.py  start_dashboard.sh
src/agent/: critic.py  ensemble.py  multi_run.py  sports.py  tool_agent.py  trade_signals.py
src/data/: fetcher.py  filters.py  kalshi.py  manifold.py  normalizer.py  odds_api.py  polymarket.py  (+1 more)
(+20 files in other folders)
